Fix margin/padding overlap issues and change tour-tab css

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -111,6 +111,38 @@ header {
 }
 
 
+/* Tab CSS */
+.tab {
+    overflow: hidden;
+    background-color: #f1f1f1;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    cursor: pointer;
+    padding: 1rem;
+    transition: 0.3s;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #ccc;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+  }
+
+
+
 @media screen and (min-width: 426px) {
 
     .hero-img,
